--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -244,7 +244,7 @@
                     }
 
 
-                    @if (@ViewBag.FirmaId == "6682972f420b0208d3d620a7")
+                    @if (!(@ViewBag.FirmaId == "6682972f420b0208d3d620a7"))
                     {
                         <!--Ayrıcı-->
                         <li><hr class="hr-horizontal"></li>
