--- a/B2BApp.Web/Views/Satis/DetayliSatisRapor.cshtml
+++ b/B2BApp.Web/Views/Satis/DetayliSatisRapor.cshtml
@@ -130,11 +130,11 @@
     function loadTable() {
 
         $.ajax({
-            url: 'https://10.60.60.141/api/Satis/GetAllWithDetailsByFilters',
+            url: 'https://localhost:44369/api/Satis/GetAllWithDetailsByFilters',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             },
             data: {
                 'ilkTarih': tarih1,
@@ -315,11 +315,11 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://localhost:44369/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             },
 
         }).done(function (response) {
@@ -455,11 +455,11 @@
 
         //KATEGORİLER
         $.ajax({
-            url: 'https://10.60.60.141/api/kategori/all',
+            url: 'https://localhost:44369/api/kategori/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             }
         }).done(function (response) {
             console.log(response.data);
@@ -506,11 +506,11 @@
 
         //firmlar
         $.ajax({
-            url: 'https://10.60.60.141/api/Firma/all',
+            url: 'https://localhost:44369/api/Firma/all',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             }
         }).done(function (response) {
             console.log(response.data);
