--- a/B2BApp.Web/Views/SubeStok/SubeStokDurumTest.cshtml
+++ b/B2BApp.Web/Views/SubeStok/SubeStokDurumTest.cshtml
@@ -40,11 +40,11 @@
 
     function initTable() {
         $.ajax({
-            url: 'https://10.60.60.141/api/SubeStok/GetAllWithSubeAndUrunByTedarikciId',
+            url: 'https://localhost:44369/api/SubeStok/GetAllWithSubeAndUrunByTedarikciId',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             },
             data: { 
                 'tedarikciId': '@ViewBag.FirmaId',
@@ -121,11 +121,11 @@
 
         //firmalar load
         $.ajax({
-            url: 'https://10.60.60.141/api/Filter/GetFirmaSubeKategoriAll',
+            url: 'https://localhost:44369/api/Filter/GetFirmaSubeKategoriAll',
             crossDomain: true,
             headers: {
                 'accept': 'text/plain',
-                'Authorization': "Bearer " + "@ViewBag.JwtCookie"
+                //'Authorization': "Bearer " + "@ViewBag.JwtCookie"
             },
 
         }).done(function (response) {
